@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3643 2004/12/01 00:18:57 peterrees Exp $
+ * $Id: ChangeLog,v 1.3644 2004/12/01 00:54:24 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-12-01 14:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
+  * /source/rtl/regex.c
+    + HB_FUNC( HB_ISREGEXSTRING ) - test string from PRG code
+         to see if it is a compiled regex string
+
 2004-12-01 13:50 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   * /include/thread.h
   * /source/vm/thread.c
